Updates to batch upload for inclusion of pigmentation (patterning code).

--- a/src/main/resources/bundles/batchUpload.properties
+++ b/src/main/resources/bundles/batchUpload.properties
@@ -27,6 +27,7 @@ batchUpload.verifyError.encounterUnknownIndividual=Encounter {0} refers to unkno
 batchUpload.verifyError.encounterInvalidSex=Encounter {0} specifies an invalid sex: {1}
 batchUpload.verifyError.encounterInvalidTaxonomy=Encounter {0} specifies an invalid taxonomy: {1}
 batchUpload.verifyError.encounterInvalidLifeStage=Encounter {0} specifies an invalid life stage: {1}
+batchUpload.verifyError.encounterInvalidPatterningCode=Encounter {0} specifies an invalid patterning code: {1}
 batchUpload.verifyError.encounterNoLocation=Encounter {0} must specify a valid location
 batchUpload.verifyError.encounterInvalidLocation=Encounter {0} specifies an invalid location: {1}
 batchUpload.verifyError.encounterInvalidLocationPermission=Insufficient permission to import data for location: {0}
@@ -114,13 +115,14 @@ gui.step2.enums.list3=<span class="dataType">Encounter</span> <span class="colHe
 gui.step2.enums.list4=<span class="dataType">Encounter</span> <span class="colHeader">Location ID</span> data must be one of: <span class="enum">{0}</span>
 gui.step2.enums.list5=<span class="dataType">Encounter</span> <span class="colHeader">Living Status</span> data must be one of: <span class="enum">{0}</span>
 gui.step2.enums.list6=<span class="dataType">Encounter</span> <span class="colHeader">Life Stage</span> data must be one of: <span class="enum">{0}</span>
-gui.step2.enums.list7=<span class="dataType">Encounter</span> <span class="colHeader">Researcher Comments</span> data must be one of: <span class="enum">{0}</span>
-gui.step2.enums.list8=<span class="dataType">Measurement</span> <span class="colHeader">Type</span> data must be one of: <span class="enum">{0}</span>
-gui.step2.enums.list9=<span class="dataType">Measurement</span> <span class="colHeader">Units</span> data must be one of: <span class="enum">{0}</span>
-gui.step2.enums.list10=<span class="dataType">Measurement</span> <span class="colHeader">Protocol</span> data must be one of: <span class="enum">{0}</span>
-gui.step2.enums.list11=<span class="dataType">Media</span> <span class="colHeader">Keyword</span> data can be any of: <span class="enum">{0}</span>
-gui.step2.enums.list12=<span class="dataType">Sample</span> <span class="colHeader">Tissue Type</span> data must be one of: <span class="enum">{0}</span>
-gui.step2.enums.list13=<span class="dataType">Sample</span> <span class="colHeader">Preservation Method</span> data must be one of: <span class="enum">{0}</span>
+gui.step2.enums.list7=<span class="dataType">Encounter</span> <span class="colHeader">Pigmentation</span> data must be one of: <span class="enum">{0}</span>
+gui.step2.enums.list8=<span class="dataType">Encounter</span> <span class="colHeader">Researcher Comments</span> data must be one of: <span class="enum">{0}</span>
+gui.step2.enums.list9=<span class="dataType">Measurement</span> <span class="colHeader">Type</span> data must be one of: <span class="enum">{0}</span>
+gui.step2.enums.list10=<span class="dataType">Measurement</span> <span class="colHeader">Units</span> data must be one of: <span class="enum">{0}</span>
+gui.step2.enums.list11=<span class="dataType">Measurement</span> <span class="colHeader">Protocol</span> data must be one of: <span class="enum">{0}</span>
+gui.step2.enums.list12=<span class="dataType">Media</span> <span class="colHeader">Keyword</span> data can be any of: <span class="enum">{0}</span>
+gui.step2.enums.list13=<span class="dataType">Sample</span> <span class="colHeader">Tissue Type</span> data must be one of: <span class="enum">{0}</span>
+gui.step2.enums.list14=<span class="dataType">Sample</span> <span class="colHeader">Preservation Method</span> data must be one of: <span class="enum">{0}</span>
 
 gui.step2.pluginText=MantaMatcher also has a specialized algorithm to analyze the ventral spot patterns of mantas. It uses &quot;candidate region&quot; (CR) photos for this, which are carefully aligned & cropped versions of identification (ID) photos. These are also supported during batch upload in the <span class="dataType">Media</span> data file, and must have a filename exactly as the related ID photo, but with a &quot;_CR&quot; suffix. For example, for an ID photo specified as <span class="fileName">http://myserver.org/batchdata/2013-06-15-Manta1.jpg</span>, the CR photo must be called <span class="fileName">http://myserver.org/batchdata/2013-06-15-Manta1_CR.jpg</span>.
 
