--- a/.project
+++ b/.project
@@ -1,5 +1,5 @@
 <projectDescription>
-  <name>wildbook</name>
+  <name>caribwhale</name>
   <comment>NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
   <projects/>
   <buildSpec>
