LOCAL: locationID changes

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -75,7 +75,7 @@ maxTriangleRotation=30
 C=0.99
 
 #Other common properties used for some data export (e.g. Encounter Search Excel export)
-citation=Holmberg J, Arzoumanian Z, Pierce S, and Norman B. Wildbook for Whale Sharks. version 2014. www.whaleshark.org
+citation=Holmberg J, Arzoumanian Z, and Pierce S. Wildbook for Whale Sharks. version 2014. www.whaleshark.org
 kingdom=Animalia
 phylum=Chordata
 class=Chondrichthyes
@@ -83,7 +83,7 @@ order=Orectolobiformes
 family=Rhincodontidae
 genus=Rhincodon
 species=Rhincodon typus
-institutionCode=ECOCEAN
+institutionCode=WILDME
 catalogCode=RhincodonTypus
 
 #pattern recognition
@@ -99,7 +99,7 @@ isCatalogEditable = true
 tapirLinkURL = http://www.whaleshark.org/tapirlink/admin/configurator.php
 
 #GBIF IPT-related settings
-iptURL = http://www.whaleshark.org/ipt-2.0.2
+#iptURL = http://www.whaleshark.org/ipt-2.0.2
 
 #show EXIF data
 showEXIF = true
@@ -271,8 +271,14 @@ role56 = 7a
 role57 = 7b
 role58 = 7c
 role59 = 7d
-role60 = 8a
-role61 = rest
+role60 = Mexico-BLP
+role61 = Mexico- LC
+role62 = Mexico-Nayarit
+role63 = Mexico-BLA
+role64 = Mexico-Revillagigedo
+role65 = Mexico-BC
+role66 = 8a
+role67 = rest
 
 
 #Security role definitions, as displayed in user.jsp. These help keep track of how and why roles are used
@@ -336,9 +342,16 @@ roleDefinition55 = Eastern Pacific permissions.
 roleDefinition56 = Galapagos Islands permissions.
 roleDefinition57 = Cocos Island permissions.
 roleDefinition58 = Panama, Pacific permissions.
-roleDefinition59 = Bahia de los Angeles, Mexico, Pacific permissions.
-roleDefinition60 = Eastern Australian Coast permissions.
-roleDefinition61 = Can access RESTful data exposure URLs.
+roleDefinition59 = 7d (DEPRECATED - old Bahia LA, Mexico permissions)
+roleDefinition60 = Mexico-BLP
+roleDefinition61 = Mexico- LC
+roleDefinition62 = Mexico-Nayarit
+roleDefinition63 = Mexico-BLA
+roleDefinition64 = Mexico-Revillagigedo
+roleDefinition65 = Mexico-BC
+roleDefinition66 = Eastern Australian Coast permissions.
+roleDefinition67 = Can access RESTful data exposure URLs.
+
 
 showUsersToPublic = true
 
@@ -375,3 +388,69 @@ language1 = es
 en = English
 es = espa\u00f1ol
 fr = fran&#231;ais
+
+locationID0 = 1
+locationID1 = 1a
+locationID2 = 1a1
+locationID3 = 1a2
+locationID4 = 1a3
+locationID5 = 1b
+locationID6 = 1c
+locationID7 = 1d
+locationID8 = 1e
+locationID9 = 1f
+locationID10 = 1g
+locationID11 = 2
+locationID12 = 2a
+locationID13 = 2b
+locationID14 = 2c
+locationID15 = 2d
+locationID16 = 2e
+locationID17 = 2e1
+locationID18 = 2f
+locationID19 = 2g
+locationID20 = 2h
+locationID21 = 2h1
+locationID22 = 2h2
+locationID23 = 4a
+locationID24 = 4a1
+locationID25 = 4b
+locationID26 = 4c
+locationID27 = 4d
+locationID28 = 4e
+locationID29 = 4f
+locationID30 = 4g
+locationID31 = 4g1
+locationID32 = 4h
+locationID33 = 4h1
+locationID34 = 4h1a
+locationID35 = 4h2
+locationID36 = 4h2a
+locationID37 = 4h2b
+locationID38 = 4h2c
+locationID39 = 4h3
+locationID40 = 4h4
+locationID41 = 5a
+locationID42 = 5b
+locationID43 = 6a
+locationID44 = 6a1
+locationID45 = 6a2
+locationID46 = 6a3
+locationID47 = 6b
+locationID48 = 7
+locationID49 = 7a
+locationID50 = 7b
+locationID51 = 7c
+locationID52 = 7d
+locationID53 = Mexico-BLP
+locationID54 = Mexico- LC
+locationID55 = Mexico-Nayarit
+locationID56 = Mexico-BLA
+locationID57 = Mexico-Revillagigedo
+locationID58 = Mexico-BC
+locationID59 = 7e
+locationID60 = 8a
+
+
+
+
