more silo blockage on other encounter functionality (and some individual stuff, pending actual decision on how to handle silo+individuals)

--- a/src/main/resources/bundles/en/collaboration.properties
+++ b/src/main/resources/bundles/en/collaboration.properties
@@ -53,3 +53,6 @@ state_approved = active
 state_initialized = invitation sent
 state_initialized_me = invited
 state_rejected = declined
+
+functionalityBlockedMessage = This function is not available because you do not have access to one or more encounters in the results.
+
