--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -364,6 +364,7 @@ showPatterningCode = false
 
 #whether this Wildbook instance is integrated with the Wild Me social media initiative
 isIntegratedWithWildMe = true
+wildMeDataSourcePrefix = WS-
 
 #Manage settings for a user agreement indicating terms of usage for this Wildbook
 showUserAgreement = false
