add "collaboration query log" for silo security (logs collaborators looking at your stuff) and related viewing; some cleanup of debug noise; little more verbose silo blockage messages

--- a/src/main/resources/bundles/en/collaboration.properties
+++ b/src/main/resources/bundles/en/collaboration.properties
@@ -38,6 +38,9 @@ inviteEmailBody = You have a request to collaborate on %s from %s.  Please see: 
 inviteEmailHasMessage = An additional message was provided:
 
 deniedMessage = Access to this resource is limited.
+deniedMessagePending = An invite to collaborate is pending for this user.
+deniedMessageRejected = User has refused your collaboration invite.
+
 clickCollaborateMessage = Click to request collaboration.
 
 notifications = notifications
