lots of VM and CR magic, including most of back-end processing

--- a/src/main/resources/bundles/en/visualMatcher.properties
+++ b/src/main/resources/bundles/en/visualMatcher.properties
@@ -8,8 +8,9 @@ candidatesTitle = Candidate Encounters
 anyPigmentation = Any pigmentation
 anySex = Any sex
 anyRegion = Any region
+anyMma = Any MMA
 mmaCompat = MMA-compatible
-mmmIncompat = Not MMA-compatible
+mmaIncompat = Not MMA-compatible
 
 searchButton = SEARCH
 
@@ -18,3 +19,5 @@ errorFetching = Error fetching data
 candidatesNoMatch = No matching candidates.
 
 zoomMessage = Hit <b>Z</b> to zoom in on <b>Encounter %s</b>, image %s.
+
+matchButton = Match target and this candidate
