--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -851,6 +851,11 @@
   </servlet>
 
   <servlet>
+    <servlet-name>EncounterCR</servlet-name>
+    <servlet-class>org.ecocean.servlet.EncounterCR</servlet-class>
+  </servlet>
+
+  <servlet>
     <servlet-name>SinglePhotoVideoAddKeyword</servlet-name>
     <servlet-class>org.ecocean.servlet.SinglePhotoVideoAddKeyword</servlet-class>
   </servlet>
@@ -1415,6 +1420,11 @@
   <servlet-mapping>
     <servlet-name>EncounterVMData</servlet-name>
     <url-pattern>/EncounterVMData</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>EncounterCR</servlet-name>
+    <url-pattern>/EncounterCR</url-pattern>
   </servlet-mapping>
 
 
