--- a/src/main/resources/bundles/en/searchResults.properties
+++ b/src/main/resources/bundles/en/searchResults.properties
@@ -69,3 +69,5 @@ exportOptions = Export Options
 analysis = Analysis
 export = Export
 occurrenceID = Occurrence ID
+
+vmShortDescription = Use Visual Matcher with this Encounter
