--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,12 @@
 	<version>3.1.1.RELEASE</version>
 </dependency>
 
+<dependency>
+	<groupId>com.google.code.gson</groupId>
+	<artifactId>gson</artifactId>
+	<version>2.2.4</version>
+</dependency>
+
 
 <dependency>
 	<groupId>org.json</groupId>
