Adding silo security default config setting

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -288,5 +288,7 @@ language1 = es
 
 
 en = English
-es = espa\u00f1ol
-fr = fran&#231;ais
+es = Espa\u00f1ol
+
+#silo security
+collaborationSecurityEnabled = true
