--- a/src/main/resources/bundles/en/visualMatcher.properties
+++ b/src/main/resources/bundles/en/visualMatcher.properties
@@ -21,3 +21,9 @@ candidatesNoMatch = No matching candidates.
 zoomMessage = Hit <b>Z</b> to zoom in on <b>Encounter %s</b>, image %s.
 
 matchButton = Match target and this candidate
+
+matchNew = No Individual for candidate or target, please enter a new or existing ID.
+matchCandidate = The <b>candidate is Individual %s</b>.  Hit OK to use this for the target image.
+matchTarget = The <b>target is Individual %s</b>.  Hit OK to use this for the candidate image.
+matchConflict = The target and candidate have <b>different Individual IDs</b> associated.  Unable to resolve at this time.
+
