VM link placement and tweaks from feedback; fix zoom of images on encounter page; custom text for CR button

--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -274,3 +274,5 @@ exitFullscreen = Exit Full Screen
 jspImport0=mantaMatcherAlgorithm.jsp
 #jspImport1=myFile.jsp
 #jspImport2=myFile.jsp
+
+crButton = Create optional candidate region
