--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.ecocean</groupId>
   <artifactId>wildbook</artifactId>
-  <version>5.0.5-EXPERIMENTAL</version>
+  <version>5.0.5-RELEASE</version>
   <packaging>war</packaging>
 
   <properties>
