LOCAL: Setting version and context name

--- a/src/main/resources/bundles/contexts.properties
+++ b/src/main/resources/bundles/contexts.properties
@@ -1,11 +1,11 @@
 
 #project-related variables
-application.version=${pom.version}
+application.version=5.0.5-RELEASE
 defaultContext = context0
 
 
 context0DataDir = shepherd_data_dir
-context0Name = Project X
+context0Name = MM
 #context0DomainName0 = mydomain.com
 
 #context0DomainName1 = myotherdomain.com
