--- a/pom.xml
+++ b/pom.xml
@@ -256,7 +256,7 @@
     <dependency>
       <groupId>com.drewnoakes</groupId>
       <artifactId>metadata-extractor</artifactId>
-      <version>2.4.0-beta-1</version>
+      <version>2.6.2</version>
     </dependency>
 <!--
     <dependency>
@@ -302,6 +302,8 @@
     <artifactId>xml-apis</artifactId>
     <version>1.4.01</version>
 </dependency>
+
+
     
       <dependency>
         <groupId>org.geotools</groupId>
