LOCAL: turn species back on

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -109,15 +109,15 @@ http://www.mantamatcher.org/tapirlink/admin/configurator.php
 showEXIF = true
 
 #show taxonomy
-showTaxonomy = false
+showTaxonomy = true
 
 
 #taxonomy details
-kingdom=whichKingdom
-phylum=whichPhylum
-class=whichClass
-order=whichOrder
-family=whichFamily
+kingdom=Animalia
+phylum=Chordata
+class=Chondrichthyes
+order=Myliobatiformes
+family=Mobulidae
 
 #for multi-species libraries, fill out the genus and species for each supported animal type, starting with genusSpecies0
 genusSpecies0=Manta birostris
