--- a/pom.xml
+++ b/pom.xml
@@ -261,7 +261,7 @@
     <dependency>
       <groupId>com.drewnoakes</groupId>
       <artifactId>metadata-extractor</artifactId>
-      <version>2.6.2</version>
+      <version>2.4.0-beta-1</version>
     </dependency>
 <!--
     <dependency>
@@ -307,8 +307,6 @@
     <artifactId>xml-apis</artifactId>
     <version>1.4.01</version>
 </dependency>
-
-
     
       <dependency>
         <groupId>org.geotools</groupId>
