--- a/src/main/resources/bundles/en/submit.properties
+++ b/src/main/resources/bundles/en/submit.properties
@@ -99,3 +99,5 @@ dragInstructionsIE = Click to select one or more files.
 dragInstructions = Drag all image/video files here simultaneously, or click here to open the file dialog box and manually multi-select them.
 confirmFilesOK = Images/Videos uploaded
 confirmFilesBad = Files rejected, not valid images
+format = Format:
+examples: Examples:
