--- a/src/main/resources/bundles/es/submit.properties
+++ b/src/main/resources/bundles/es/submit.properties
@@ -97,3 +97,6 @@ dragInstructionsIE = Haga clic para seleccionar una o varias im\u00e1genes.
 dragInstructions = Arrastre todos los archivos de imagen y v\u00eddeo aqu\u00ed de forma simult\u00e1nea, o haga clic aqu\u00ed para abrir el di\u00e1logo de archivo y manualmente seleccionarlos.
 confirmFilesOK = Los archivos se han subido.
 confirmFilesBad = Archivos rechazados, las im\u00e1genes no v\u00e1lidos
+
+format = Formato:
+examples = Ejemplos:
