- Encounter.refreshAssetFormats() - a hint of the future? - ImageProcessor.class - imagemagick (or whatever) background image resizing - Shepherd.isAcceptableImageFile now static, so can be used more readily - SinglePhotoVideo.scaleTo() and .scaleToWatermark() - EncounterForm (new encounter) now calls refreshAssetFormats() - encounterImagesEmbed.jsp now uses SinglePhotoVideo.scaleTo() if it can (and watermark variant) - as does resetThumbnail.jsp - updateAllImages.jsp - (poweruser only!) utility to create a shell script to update allllll derived images

--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -276,3 +276,5 @@ jspImport0=mantaMatcherAlgorithm.jsp
 #jspImport2=myFile.jsp
 
 crButton = Create optional candidate region
+
+imgWatermark=Unauthorised copying not permitted
