useful defaults for imagemagick processing of image resizing etc

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -437,3 +437,13 @@ language1 = es
 en = English
 es = espa\u00f1ol
 fr = fran&#231;ais
+
+
+
+### uncomment these (and adjust accordingly) if you wish for images to be done in background using your favorite command-line tool
+
+#imageResizeCommand = /usr/bin/convert -quality 80 -resize %widthx%height^ %imagesource -gravity center -crop %widthx%height+0+0 %imagetarget
+
+#imageWatermarkCommand = /usr/bin/convert -quality 70 -resize %widthx%height^ %imagesource -gravity center -crop %widthx%height+0+0  -gravity Center  /opt/tomcat7/webapps/mm/images/watermark.png -compose Over -composite %imagetarget
+
+
