--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -193,7 +193,7 @@ satelliteTagName0=Wild Life Computers
 satelliteTagName1=SirTack
 
 #releaseDate
-showReleaseDate=true
+showReleaseDate=false
 #Following releaseDateFormat must be readable by java.text.SimpleDateFormat
 releaseDateFormat=yyyy-MM-dd
 
