--- a/src/main/resources/bundles/Plugin_MantaMatcher.properties
+++ b/src/main/resources/bundles/Plugin_MantaMatcher.properties
@@ -4,6 +4,5 @@
 
 plugin.status=STATUS: Processing selected images for use with MantaMatcher algorithm
 plugin.warning.duplicate=Duplicate MantaMatcher image found: {0}; ignoring
-plugin.warning.fileNotFound=MantaMatcher reference image not found: {0}
-plugin.warning.noReference=Unable to find associated reference image for: {0}; self-referencing
+plugin.warning.noReference=Unable to find associated reference image for: {0}; ignoring
 plugin.warning.mmprocess.failed=Failed to process MantaMatcher algorithm image correctly: {0} (possibly insufficient quality)
