--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -275,3 +275,7 @@ clickEnlarge = Click to enlarge
 jspImport0=spotMatchingAlgorithm.jsp
 #jspImport1=myFile.jsp
 #jspImport2=myFile.jsp
+
+crButton = Create optional candidate region
+
+imgWatermark=Unauthorised copying not permitted
