--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -278,4 +278,6 @@ jspImport0=spotMatchingAlgorithm.jsp
 
 crButton = Create optional candidate region
 
-imgWatermark=Unauthorised copying not permitted
+### uncomment (and adjust accordingly) if you wish to have a css-based watermark appear over encounter images
+#imgWatermark=Unauthorised copying not permitted
+
