--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -390,6 +390,7 @@ en = English
 es = espa\u00f1ol
 fr = fran&#231;ais
 
+
 locationID0 = 1
 locationID1 = 1a
 locationID2 = 1a1
@@ -452,6 +453,20 @@ locationID58 = Mexico-BC
 locationID59 = 7e
 locationID60 = 8a
 
+#silo security
+collaborationSecurityEnabled = false
+
+
+
+
+
+
+
+### uncomment these (and adjust accordingly) if you wish for images to be done in background using your favorite command-line tool
+
+#imageResizeCommand = /usr/bin/convert -quality 80 -resize %widthx%height^ %imagesource -gravity center -crop %widthx%height+0+0 %imagetarget
+
+#imageWatermarkCommand = /usr/bin/convert -quality 70 -resize %widthx%height^ %imagesource -gravity center -crop %widthx%height+0+0  -gravity Center  /opt/tomcat7/webapps/mm/images/watermark.png -compose Over -composite %imagetarget
 
 
 
