--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -443,6 +443,16 @@
     <servlet-name>EncounterForm</servlet-name>
     <servlet-class>org.ecocean.servlet.EncounterForm</servlet-class>
   </servlet>
+  
+    <servlet>
+    <servlet-name>Collaborate</servlet-name>
+    <servlet-class>org.ecocean.servlet.Collaborate</servlet-class>
+  </servlet>
+  
+  <servlet>
+    <servlet-name>JavascriptGlobals</servlet-name>
+    <servlet-class>org.ecocean.servlet.JavascriptGlobals</servlet-class>
+  </servlet>
 
   <servlet>
     <servlet-name>EncounterSetIdentifiable</servlet-name>
@@ -1216,6 +1226,16 @@
    <servlet-mapping>
     <servlet-name>EncounterForm</servlet-name>
     <url-pattern>/EncounterForm</url-pattern>
+  </servlet-mapping>
+  
+    <servlet-mapping>
+    <servlet-name>Collaborate</servlet-name>
+    <url-pattern>/Collaborate</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>JavascriptGlobals</servlet-name>
+    <url-pattern>/JavascriptGlobals.js</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
