starting to build out our own api based on (implementing, actually) datanucleus rest

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -989,6 +989,22 @@
   </servlet-mapping>
 
 
+  <servlet>
+    <servlet-name>WildbookApi</servlet-name>
+    <servlet-class>org.ecocean.servlet.Api</servlet-class>
+    <init-param>
+      <param-name>persistence-context</param-name>
+      <param-value>ShepherdPMF</param-value>
+    </init-param>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>WildbookApi</servlet-name>
+    <url-pattern>/api/*</url-pattern>
+  </servlet-mapping>
+
+
+
   <servlet-mapping>
     <servlet-name>ImgSyncServlet0</servlet-name>
     <url-pattern>/ImgSyncServlet0</url-pattern>
