--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -111,7 +111,7 @@
                 /InterconnectSubmitSpots = authc, roles[imageProcessor]
 	
 		/GenePopExport = authc, roles[researcher]
-		/ResetCommonConfiguration = authc, roles[admin]
+		
 
 		/individualSearch.jsp = authc
 		/interconnectSubmitSpots= authc, roles[imageProcessor]
@@ -268,59 +268,6 @@
   </servlet>
 
 
-  <!-- Action Servlet Configuration -->
-
-  <servlet>
-    <servlet-name>uploadAction</servlet-name>
-    <servlet-class>org.apache.struts.action.ActionServlet</servlet-class>
-    <init-param>
-      <param-name>config</param-name>
-      <param-value>/WEB-INF/struts-config.xml</param-value>
-    </init-param>
-    <init-param>
-      <param-name>debug</param-name>
-      <param-value>2</param-value>
-    </init-param>
-    <init-param>
-      <param-name>detail</param-name>
-      <param-value>2</param-value>
-    </init-param>
-    <init-param>
-      <param-name>application</param-name>
-      <param-value>org.apache.struts.webapp.upload.UploadResources</param-value>
-    </init-param>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-
-  <servlet>
-    <servlet-name>action</servlet-name>
-    <servlet-class> org.apache.struts.action.ActionServlet </servlet-class>
-    <init-param>
-      <param-name>config</param-name>
-      <param-value>/WEB-INF/struts-config.xml</param-value>
-    </init-param>
-    <init-param>
-      <param-name>debug</param-name>
-      <param-value>0</param-value>
-    </init-param>
-    <init-param>
-      <param-name>detail</param-name>
-      <param-value>0</param-value>
-    </init-param>
-    <init-param>
-      <param-name>locale</param-name>
-      <param-value>true</param-value>
-    </init-param>
-    <init-param>
-      <param-name>nocache</param-name>
-      <param-value>true</param-value>
-    </init-param>
-    <init-param>
-      <param-name>validate</param-name>
-      <param-value>true</param-value>
-    </init-param>
-    <load-on-startup>2</load-on-startup>
-  </servlet>
 
 
   <servlet>
@@ -478,12 +425,12 @@
     <servlet-name>DontTrack</servlet-name>
     <servlet-class>org.ecocean.servlet.DontTrack</servlet-class>
   </servlet>
-  
+  <!--
     <servlet>
       <servlet-name>ResetCommonConfiguration</servlet-name>
       <servlet-class>org.ecocean.servlet.ResetCommonConfiguration</servlet-class>
   </servlet>
-
+-->
   <servlet>
     <servlet-name>UpdateEmailAddress</servlet-name>
     <servlet-class>org.ecocean.servlet.UpdateEmailAddress</servlet-class>
@@ -503,6 +450,11 @@
   <servlet>
     <servlet-name>EncounterAddSpotFile</servlet-name>
     <servlet-class>org.ecocean.servlet.EncounterAddSpotFile</servlet-class>
+  </servlet>
+  
+    <servlet>
+    <servlet-name>AdoptionAction</servlet-name>
+    <servlet-class>org.ecocean.servlet.AdoptionAction</servlet-class>
   </servlet>
   
   
@@ -629,7 +581,7 @@
   
         <servlet>
         <servlet-name>ningalooPradel</servlet-name>
-        <servlet-class>org.ecocean.servlet.export.NingalooPradel</servlet-class>
+        <servlet-class>org.ecocean.servlet.NingalooPradel</servlet-class>
   </servlet>
   
      <servlet>
@@ -1047,10 +999,12 @@
       <url-pattern>/TissueSampleSetHaplotype</url-pattern>
   </servlet-mapping>
   
+  <!--
       <servlet-mapping>
         <servlet-name>ResetCommonConfiguration</servlet-name>
         <url-pattern>/ResetCommonConfiguration</url-pattern>
   </servlet-mapping>
+  -->
   
       <servlet-mapping>
         <servlet-name>DeleteAllDataPermanently</servlet-name>
@@ -1567,6 +1521,11 @@
     <servlet-name>DeleteAdoption</servlet-name>
     <url-pattern>/DeleteAdoption</url-pattern>
   </servlet-mapping>
+  
+   <servlet-mapping>
+    <servlet-name>AdoptionAction</servlet-name>
+    <url-pattern>/AdoptionAction</url-pattern>
+  </servlet-mapping>
 
 
   <servlet-mapping>
@@ -1706,7 +1665,7 @@
   </servlet-mapping>
   
 
-  <!-- Action Servlet Mapping -->
+  <!-- Struts 1 Action Servlet Mapping 
   <servlet-mapping>
     <servlet-name>action</servlet-name>
     <url-pattern>*.do</url-pattern>
@@ -1716,6 +1675,6 @@
     <servlet-name>uploadAction</servlet-name>
     <url-pattern>*.jh</url-pattern>
   </servlet-mapping>
-
+-->
 
 </web-app>
