Removing Struts 1 code

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -257,59 +257,6 @@
   </servlet>
 
 
-  <!-- Action Servlet Configuration -->
-
-  <servlet>
-    <servlet-name>uploadAction</servlet-name>
-    <servlet-class>org.apache.struts.action.ActionServlet</servlet-class>
-    <init-param>
-      <param-name>config</param-name>
-      <param-value>/WEB-INF/struts-config.xml</param-value>
-    </init-param>
-    <init-param>
-      <param-name>debug</param-name>
-      <param-value>2</param-value>
-    </init-param>
-    <init-param>
-      <param-name>detail</param-name>
-      <param-value>2</param-value>
-    </init-param>
-    <init-param>
-      <param-name>application</param-name>
-      <param-value>org.apache.struts.webapp.upload.UploadResources</param-value>
-    </init-param>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-
-  <servlet>
-    <servlet-name>action</servlet-name>
-    <servlet-class> org.apache.struts.action.ActionServlet </servlet-class>
-    <init-param>
-      <param-name>config</param-name>
-      <param-value>/WEB-INF/struts-config.xml</param-value>
-    </init-param>
-    <init-param>
-      <param-name>debug</param-name>
-      <param-value>0</param-value>
-    </init-param>
-    <init-param>
-      <param-name>detail</param-name>
-      <param-value>0</param-value>
-    </init-param>
-    <init-param>
-      <param-name>locale</param-name>
-      <param-value>true</param-value>
-    </init-param>
-    <init-param>
-      <param-name>nocache</param-name>
-      <param-value>true</param-value>
-    </init-param>
-    <init-param>
-      <param-name>validate</param-name>
-      <param-value>true</param-value>
-    </init-param>
-    <load-on-startup>2</load-on-startup>
-  </servlet>
 
 
   <servlet>
@@ -453,6 +400,11 @@
   <servlet>
     <servlet-name>EncounterAddSpotFile</servlet-name>
     <servlet-class>org.ecocean.servlet.EncounterAddSpotFile</servlet-class>
+  </servlet>
+  
+    <servlet>
+    <servlet-name>AdoptionAction</servlet-name>
+    <servlet-class>org.ecocean.servlet.AdoptionAction</servlet-class>
   </servlet>
   
   
@@ -1472,6 +1424,11 @@
     <servlet-name>DeleteAdoption</servlet-name>
     <url-pattern>/DeleteAdoption</url-pattern>
   </servlet-mapping>
+  
+   <servlet-mapping>
+    <servlet-name>AdoptionAction</servlet-name>
+    <url-pattern>/AdoptionAction</url-pattern>
+  </servlet-mapping>
 
 
   <servlet-mapping>
@@ -1603,7 +1560,7 @@
   </servlet-mapping>
   
 
-  <!-- Action Servlet Mapping -->
+  <!-- Struts 1 Action Servlet Mapping 
   <servlet-mapping>
     <servlet-name>action</servlet-name>
     <url-pattern>*.do</url-pattern>
@@ -1613,6 +1570,6 @@
     <servlet-name>uploadAction</servlet-name>
     <url-pattern>*.jh</url-pattern>
   </servlet-mapping>
-
+-->
 
 </web-app>
