LOCAL: Adding RESTful role and securing REST interface

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -98,6 +98,8 @@
 				/appadmin/** = authc, roles[admin]
 				 /logs/** = authc, roles[admin]
              
+				/rest/** = authcBasicWildbook, roles[rest]
+			 
 			    /RelationshipCreate  = authc, roles[admin]
 		   /RelationshipDelete  = authc, roles[admin]
 			 
