--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -351,6 +351,7 @@ role37 = South Africa
 role38 = Thailand
 role39 = USA (East coast)
 role40 = Yap
+role41 = rest
 
 #Security role definitions, as displayed in user.jsp. These help keep track of how and why roles are used
 #in your Shepherd Project instance.
@@ -395,6 +396,7 @@ roleDefinition37 = South Africa permissions.
 roleDefinition38 = Thailand permissions.
 roleDefinition39 = USA (East coast) permissions.
 roleDefinition40 = Yap permissions.
+roleDefinition41 = RESTful API access permissions.
 
 
 #Sample preservation methods
