Upgrade to DataNucleus 4.0.3 - Part 2

--- a/src/main/resources/bundles/jdoconfig.properties
+++ b/src/main/resources/bundles/jdoconfig.properties
@@ -33,7 +33,7 @@ datanucleus.ConnectionURL=jdbc:derby:shepherd_derby_database;create=true
 javax.jdo.PersistenceManagerFactoryClass = org.datanucleus.api.jdo.JDOPersistenceManagerFactory           
 datanucleus.ConnectionUserName = shepherd               
 datanucleus.ConnectionPassword = shepherd
-datanucleus.autoCreateSchema = true
+datanucleus.schema.autoCreateAll = true
 datanucleus.NontransactionalRead = true        
 datanucleus.Multithreaded = true
 datanucleus.RestoreValues = true
