--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -897,19 +897,97 @@
     <servlet-class>org.ecocean.servlet.MassExposeGBIF</servlet-class>
   </servlet>
 
-  <servlet>
-    <servlet-name>DataNucleus</servlet-name>
+
+  
+  <!-- Start REST servlet mapping-->
+  
+    <servlet-mapping>
+    <servlet-name>REST0</servlet-name>
+    <url-pattern>/rest/context0/*</url-pattern>
+  </servlet-mapping>
+  
+    <servlet>
+    <servlet-name>REST0</servlet-name>
     <servlet-class>org.datanucleus.api.rest.RestServlet</servlet-class>
     <init-param>
       <param-name>persistence-context</param-name>
-      <param-value>ShepherdPMF</param-value>
+      <param-value>PatternRecognitionPMF0</param-value>
     </init-param>
   </servlet>
-
-  <servlet-mapping>
-    <servlet-name>DataNucleus</servlet-name>
-    <url-pattern>/rest/*</url-pattern>
+  
+      <servlet-mapping>
+    <servlet-name>REST1</servlet-name>
+    <url-pattern>/rest/context1/*</url-pattern>
   </servlet-mapping>
+  
+    <servlet>
+    <servlet-name>REST1</servlet-name>
+    <servlet-class>org.datanucleus.api.rest.RestServlet</servlet-class>
+    <init-param>
+      <param-name>persistence-context</param-name>
+      <param-value>PatternRecognitionPMF1</param-value>
+    </init-param>
+  </servlet>
+  
+        <servlet-mapping>
+    <servlet-name>REST2</servlet-name>
+    <url-pattern>/rest/context2/*</url-pattern>
+  </servlet-mapping>
+  
+    <servlet>
+    <servlet-name>REST2</servlet-name>
+    <servlet-class>org.datanucleus.api.rest.RestServlet</servlet-class>
+    <init-param>
+      <param-name>persistence-context</param-name>
+      <param-value>PatternRecognitionPMF2</param-value>
+    </init-param>
+  </servlet>
+  
+        <servlet-mapping>
+    <servlet-name>REST3</servlet-name>
+    <url-pattern>/rest/context3/*</url-pattern>
+  </servlet-mapping>
+  
+    <servlet>
+    <servlet-name>REST3</servlet-name>
+    <servlet-class>org.datanucleus.api.rest.RestServlet</servlet-class>
+    <init-param>
+      <param-name>persistence-context</param-name>
+      <param-value>PatternRecognitionPMF3</param-value>
+    </init-param>
+  </servlet>
+  
+        <servlet-mapping>
+    <servlet-name>REST4</servlet-name>
+    <url-pattern>/rest/context1/4</url-pattern>
+  </servlet-mapping>
+  
+    <servlet>
+    <servlet-name>REST4</servlet-name>
+    <servlet-class>org.datanucleus.api.rest.RestServlet</servlet-class>
+    <init-param>
+      <param-name>persistence-context</param-name>
+      <param-value>PatternRecognitionPMF4</param-value>
+    </init-param>
+  </servlet>
+  
+        <servlet-mapping>
+    <servlet-name>REST5</servlet-name>
+    <url-pattern>/rest/context5/*</url-pattern>
+  </servlet-mapping>
+  
+    <servlet>
+    <servlet-name>REST5</servlet-name>
+    <servlet-class>org.datanucleus.api.rest.RestServlet</servlet-class>
+    <init-param>
+      <param-name>persistence-context</param-name>
+      <param-value>PatternRecognitionPMF5</param-value>
+    </init-param>
+  </servlet>
+  
+  <!-- End REST servlet mapping-->
+
+
 
 
   <servlet-mapping>
