--- a/pom.xml
+++ b/pom.xml
@@ -134,11 +134,22 @@
     	<artifactId>postgresql</artifactId>
     	<version>9.1-901.jdbc4</version>
 </dependency>
+
+<!--
 <dependency>
 	<groupId>org.apache.commons</groupId>
 	<artifactId>commons-math</artifactId>
 	<version>2.2</version>
 </dependency>
+-->
+
+<dependency>
+	<groupId>org.apache.commons</groupId>
+	<artifactId>commons-math3</artifactId>
+	<version>3.2</version>
+</dependency>
+
+
 
 <dependency>
 	<groupId>commons-fileupload</groupId>
@@ -341,6 +352,12 @@
                   <version>1.6.1</version>
         </dependency>
     
+	<dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
+    </dependency>
     
   </dependencies>
 
@@ -356,7 +373,7 @@
 
   
     <plugins>
-    
+
 	   <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-clean-plugin</artifactId>
@@ -483,6 +500,9 @@
 
         </configuration>
       </plugin>
+	  
+	  
+	  
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
