Moving around user agreement per Andrea's request

--- a/src/main/resources/bundles/en/header.properties
+++ b/src/main/resources/bundles/en/header.properties
@@ -61,3 +61,4 @@ selectLanguage = Select Language:
 switchContext = Switch Context:
 findRecord = Find Record:
 myAccount = My Account
+userAgreement = User Agreement
