LOCAL: Adding Peru for STan

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -266,20 +266,21 @@ country20 = Niue
 country21 = Northern Mariana Islands
 country22 = Palau
 country23 = Papua New Guinea
-country24 = Philippines
-country25 = Portugal
-country26 = Samoa
-country27 = Saudi Arabia
-country28 = Seychelles
-country29 = Solomon Islands
-country30 = South Africa
-country31 = Tokelau
-country32 = Tonga
-country33 = Tuvalu
-country34 = United Kingdom
-country35 = United States of America
-country36 = Vanuatu
-country37 = Yap
+country24 = Peru
+country25 = Philippines
+country26 = Portugal
+country27 = Samoa
+country28 = Saudi Arabia
+country29 = Seychelles
+country30 = Solomon Islands
+country31 = South Africa
+country32 = Tokelau
+country33 = Tonga
+country34 = Tuvalu
+country35 = United Kingdom
+country36 = United States of America
+country37 = Vanuatu
+country38 = Yap
 
 
 #tissue sample types
