--- a/src/main/resources/bundles/jdoconfig.properties
+++ b/src/main/resources/bundles/jdoconfig.properties
@@ -1,8 +1,8 @@
 #DataNucleus parameters for object persistence
 
 # The following two lines create a connection to an embedded Apache Derby database.
-datanucleus.ConnectionDriverName=org.apache.derby.jdbc.EmbeddedDriver
-datanucleus.ConnectionURL=jdbc:derby:shepherd_derby_database;create=true
+#datanucleus.ConnectionDriverName=org.apache.derby.jdbc.EmbeddedDriver
+#datanucleus.ConnectionURL=jdbc:derby:shepherd_derby_database;create=true
 
 # The following two lines create a connection to a SQLite database.
 # You will also need to add the JDBC JAR file for your SQLite version to /WEB-INF/lib.
@@ -26,14 +26,14 @@ datanucleus.ConnectionURL=jdbc:derby:shepherd_derby_database;create=true
 
 # The following lines can be used for PostgreSQL data storage.
 # You will also need to add the JDBC JAR file for your PostgreSQL version to /WEB-INF/lib.
-#datanucleus.ConnectionDriverName=org.postgresql.Driver
-#datanucleus.ConnectionURL = jdbc:postgresql://localhost:5432/myDatabaseName
+datanucleus.ConnectionDriverName=org.postgresql.Driver
+datanucleus.ConnectionURL = jdbc:postgresql://localhost:5432/wildbook
 
 
 javax.jdo.PersistenceManagerFactoryClass = org.datanucleus.api.jdo.JDOPersistenceManagerFactory           
-datanucleus.ConnectionUserName = shepherd               
+datanucleus.ConnectionUserName = ken               
 datanucleus.ConnectionPassword = shepherd
-datanucleus.schema.autoCreateAll = true
+datanucleus.autoCreateSchema = true
 datanucleus.NontransactionalRead = true        
 datanucleus.Multithreaded = true
 datanucleus.RestoreValues = true
