--- a/src/main/resources/bundles/en/individualMappedSearchResults.properties
+++ b/src/main/resources/bundles/en/individualMappedSearchResults.properties
@@ -17,7 +17,7 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 #
 
-title = Individual Search Mapped Results
+title = Individual Search Results
 totalEncounter = Total encounters in the database
 rightClickLink = Right-click the link and save to your local hard drive.
 exportedExcel = Exported Excel spreadsheet (.xls) file
