LOCAL: Try switch to Amazon EC2 cloud

--- a/pom.xml
+++ b/pom.xml
@@ -273,6 +273,16 @@
       <artifactId>metadata-extractor</artifactId>
       <version>2.6.2</version>
     </dependency>
+	
+	
+	<!-- starting Amazon support for sharkGrid -->
+<dependency>
+	<groupId>com.amazonaws</groupId>
+	<artifactId>aws-java-sdk-ec2</artifactId>
+	<version>1.9.13</version>
+</dependency>
+	
+	
 <!--
     <dependency>
       <groupId>junit</groupId>
