LOCAL: Adding new Flower Gardens role

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -236,7 +236,8 @@ locationID26 = Seychelles
 locationID27 = South Africa
 locationID28 = Thailand
 locationID29 = USA (East coast)
-locationID30 = Yap
+locationID30 = USA (Flower Gardens)
+locationID31 = Yap
 
 #whether to show country field as a location
 showCountry = false
@@ -351,8 +352,9 @@ role36 = Seychelles
 role37 = South Africa
 role38 = Thailand
 role39 = USA (East coast)
-role40 = Yap
-role41 = rest
+role40 = USA (Flower Gardens)
+role41 = Yap
+role42 = rest
 
 #Security role definitions, as displayed in user.jsp. These help keep track of how and why roles are used
 #in your Shepherd Project instance.
@@ -396,8 +398,9 @@ roleDefinition36 = Seychelles permissions.
 roleDefinition37 = South Africa permissions.
 roleDefinition38 = Thailand permissions.
 roleDefinition39 = USA (East coast) permissions.
-roleDefinition40 = Yap permissions.
-roleDefinition41 = RESTful API access permissions.
+roleDefinition40 = USA (Flower Gardens) permissions.
+roleDefinition41 = Yap permissions.
+roleDefinition42 = RESTful API access permissions.
 
 
 #Sample preservation methods
