LOCAL: Config changes

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -139,10 +139,6 @@ samplingProtocol1=guess of guide/researcher
 samplingProtocol2=directly measured
 
 
-#show elevation/depth
-maximumElevationInMeters = true
-maximumDepthInMeters = true
-
 #show size for encounters
 showSize = true
 
@@ -282,6 +278,7 @@ role64 = Mexico-Revillagigedo
 role65 = Mexico-BC
 role66 = 8a
 role67 = rest
+role68 = rest-readonly
 
 
 #Security role definitions, as displayed in user.jsp. These help keep track of how and why roles are used
@@ -354,6 +351,7 @@ roleDefinition64 = Mexico-Revillagigedo
 roleDefinition65 = Mexico-BC
 roleDefinition66 = Eastern Australian Coast permissions.
 roleDefinition67 = Can access RESTful data exposure URLs.
+roleDefinition68 = Can access read-only RESTful data exposure URLs.
 
 
 showUsersToPublic = true
