--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -97,6 +97,7 @@
                 [urls]
                 
                 /rest/** = authcBasicWildbook,roles[rest]
+				/api/** = authcBasicWildbook,roles[rest-readonly]
                 
                 /appadmin/scanTaskAdmin.jsp = authc, roles[researcher]
                 
